fixed navbar alignment and adjusted the trophy's css on the goal list

--- a/src/css/goalList.css
+++ b/src/css/goalList.css
@@ -9,6 +9,13 @@
     width: 900px;
 }
 
+.goal-title{
+    display: flex;
+    justify-content: space-between;
+    margin: 0 10px;
+    margin-top: 4px;
+}   
+
 
 
 .goalItem {
